--- a/breaker/index.html
+++ b/breaker/index.html
@@ -17,8 +17,12 @@
   </head>
   <body>
     <img id="img_ball" src="./assets/images/ball.png" width="16" height="16">
+    <img id="img_ball_star" src="./assets/images/ball_star.png" width="16" height="16">
     <img id="img_brick" src="./assets/images/wall.png" width="16" height="16">
     <img id="img_heart" src="./assets/images/heart.png" width="16" height="16">
+    <img id="img_powerup" src="./assets/images/powerup.png" width="16" height="16">
+    <img id="img_powerup_star" src="./assets/images/powerup_star.png" width="16" height="16">
+    <img id="img_powerup_live" src="./assets/images/powerup_live.png" width="16" height="16">
     <div align="center">
       <canvas id="gameScreen" width="800" height="600"></canvas>
     </p>
