--- a/breaker/index.html
+++ b/breaker/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>My Game</title>
+    <title>Brick Breaker</title>
     <meta charset="UTF-8" />
     <style>
       #gameScreen {
@@ -23,6 +23,14 @@
     <img id="img_powerup" src="./assets/images/powerup.png" width="16" height="16">
     <img id="img_powerup_star" src="./assets/images/powerup_star.png" width="16" height="16">
     <img id="img_powerup_live" src="./assets/images/powerup_live.png" width="16" height="16">
+    <img id="img_powerup_expand" src="./assets/images/powerup_expand.png" width="16" height="16">
+    <img id="img_powerup_speed" src="./assets/images/powerup_speed.png" width="16" height="16">
+    <img id="img_paddle_left"  src="./assets/images/paddle_left.png" width="16" height="16">
+    <img id="img_paddle_mid"   src="./assets/images/paddle_mid.png" width="16" height="16">
+    <img id="img_paddle_right" src="./assets/images/paddle_right.png" width="16" height="16">
+    <img id="img_paddle_speed_left"  src="./assets/images/paddle_speed_left.png" width="16" height="16">
+    <img id="img_paddle_speed_mid"   src="./assets/images/paddle_speed_mid.png" width="16" height="16">
+    <img id="img_paddle_speed_right" src="./assets/images/paddle_speed_right.png" width="16" height="16">
     <div align="center">
       <canvas id="gameScreen" width="800" height="600"></canvas>
     </p>
